--- a/controller/src/main/resources/com/ratana/controller/HomeController.fxml
+++ b/controller/src/main/resources/com/ratana/controller/HomeController.fxml
@@ -5,6 +5,59 @@
 <?import javafx.scene.layout.Pane?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.input.KeyCodeCombination?>
+<?import javafx.scene.layout.AnchorPane?>
+<BorderPane
+        maxHeight="-Infinity"
+        maxWidth="-Infinity"
+        minHeight="-Infinity"
+        minWidth="-Infinity"
+        prefHeight="400.0"
+        prefWidth="600.0"
+        xmlns="http://javafx.com/javafx/8.0.171"
+        xmlns:fx="http://javafx.com/fxml/1">
+    <top>
+        <MenuBar >
+            <Menu text="menu" >
+                <MenuItem text="exit" >
+                    <accelerator>
+                        <KeyCodeCombination control="DOWN" code="X" alt="UP" meta="UP" shift="UP" shortcut="UP"/>
+                    </accelerator>
+                </MenuItem>
+            </Menu>
 
+            <Menu text="menu" >
+                <MenuItem text="exit" >
+                    <accelerator>
+                        <KeyCodeCombination control="DOWN" code="C" alt="UP" meta="UP" shift="UP" shortcut="UP"/>
+                    </accelerator>
+                </MenuItem>
+            </Menu>
+
+            <Menu text="menu" >
+                <MenuItem text="exit" >
+                    <accelerator>
+                        <KeyCodeCombination control="DOWN" code="P" alt="UP" meta="UP" shift="UP" shortcut="UP"/>
+                    </accelerator>
+                </MenuItem>
+            </Menu>
+
+            <Menu text="menu" >
+                <MenuItem text="exit" >
+                    <accelerator>
+                        <KeyCodeCombination control="DOWN" code="B" alt="UP" meta="UP" shift="UP" shortcut="UP"/>
+                    </accelerator>
+                </MenuItem>
+            </Menu>
+        </MenuBar>
+    </top>
+    <center>
+        <AnchorPane fx:id="body" />
+    </center>
 </BorderPane>
